Implemented Database Connection

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,18 +3,35 @@ server {
     server_name localhost;
     root /var/www/html/public;
     index index.php;
-# location directives use patterns, so this first one will be selected and the
-# directvies inside will be executed if the web address ends in .php .
-# $request_method,$document_root$fastcgi_script_name are all varibables known by nginx.
-    location ~ \.php$ {
-       fastcgi_pass   app:9000;
-       fastcgi_index  index.php;
-       fastcgi_param REQUEST_METHOD $request_method;
-       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-       include        fastcgi_params;
+
+    # Redirect /images/ to /images
+    location = /images/ {
+        return 301 /images;
     }
-# catches any other address other that .php and redirects to index.php
+
+    # Handle PHP route for /images
+    location = /images {
+        try_files $uri /index.php?$query_string;
+    }
+
+    # Handle static files in /images directory
+    location ^~ /images/ {
+        try_files $uri =404;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    # Deny access to . files
+    location ~ /\. {
+        deny all;
     }
 }
